Add JavaFX GUI client with dark theme and improve server stability
Major Features:
- Implement ClientGUI with modern dark-themed JavaFX interface
- Add welcome screen with command reference and connection info
- Support all server commands (/list, /w, bye) in GUI
- Add real-time message display with timestamps for all messages
- Implement graceful server shutdown with client notifications
- Add shutdown hook for proper Ctrl+C handling

Server Improvements:
- Add broadcastAll() method for server-wide announcements
- Implement shutdown() method with client cleanup
- Add port conflict detection with clear error messages
- Fix zombie process issue by improving shutdown mechanism
- Prevent memory leaks with single-instance enforcement

Documentation & Diagrams:
- Update class diagram with new methods and shutdown functionality
- Update sequence diagram with SSL handshake and shutdown flow
- Add orthogonal line styling to diagrams for cleaner appearance
- Update README with GUI screenshots and Version 1.1 details
- Add deployment documentation

Bug Fixes:
- Fix NullPointerException in ClientGUI.stop() on connection failure
- Fix welcome message alignment in GUI
- Ensure proper resource cleanup on application exit